# xrandr-extend

./: .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  requirements-dev.txt  setup.cfg  setup.py  tox.ini  xrandr-extend
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/xrandr_extend/: __init__.py  cli.py  cmd.py  config.py  default.cfg  main.py
tests/: test_xrandr_extend.py
xrandr_extend/: cmd.py  config.py  main.py
