[bumpversion]
current_version = 0.2.0
commit = True
tag = True

[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@pm.me
name = xrandr_extend
keywords = xrandr, hidpi, linux, external monitor
description = Extend a HIDPI screen to a normal DPI external display
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
license = GNU General Public License v3
license_file = LICENSE
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
url = https://github.com/ashwinvis/xrandr_extend
include_package_data = True
zip_safe = False

[options]
python_requires = >=3.5.0
package_dir = 
	=src
packages = find:
setup_requires = 
	setuptools>=39.2.0
	setuptools_scm
	pytest-runner
test_requires = 
	pytest

[options.packages.find]
where = src

[options.package_data]
xrandr_extend = default.cfg

[options.extras_require]
docs = 
	sphinx==2.0.1
	recommonmark>=0.5.0
	sphinx_rtd_theme==0.4.3
	numpydoc
tests = 
	pytest
	pytest-runner
dev = 
	%(docs)s
	%(tests)s
	bumpversion==0.5.3
	watchdog==0.9.0
	flake8==3.5.0
	tox==3.5.2
	coverage==4.5.1
	twine==1.13.0
	readme-renderer[md]==24.0

[options.entry_points]
console_scripts = 
	xrandr-extend = xrandr_extend.main:run

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/xrandr_extend/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

