[bumpversion]
current_version = 0.3.0
commit = True
tag = True

[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@pm.me
name = xrandr_extend
keywords = xrandr, hidpi, linux, external monitor
description = Extend a HIDPI screen to a normal DPI external display
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
license = GNU General Public License v3
license_file = LICENSE
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
url = https://github.com/ashwinvis/xrandr-extend
include_package_data = True
zip_safe = False

[options]
python_requires = >=3.6.0
package_dir = 
	=src
packages = find:
setup_requires = 
	setuptools
	setuptools_scm

[options.packages.find]
where = src

[options.package_data]
xrandr_extend = default.cfg

[options.extras_require]
docs = 
	sphinx
	recommonmark
	sphinx_rtd_theme
	numpydoc
tests = 
	pytest
	pytest-runner
dev = 
	%(docs)s
	%(tests)s
	bump2version
	watchdog
	flake8
	tox
	coverage
	twine
	build

[options.entry_points]
console_scripts = 
	xrandr-extend = xrandr_extend.main:run

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:src/xrandr_extend/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
ignore = E203,E501,W503,W505
exclude = docs
max-line-length = 82

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
